# async-batcher

./: .gitignore  BENCHMARK.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
assets/: optimized_predict__report.html  optimized_predict__report_v0.2.0.html  predict__report.html
async_batcher/: batcher.py  exceptions.py
async_batcher/aws/dynamodb/: get.py  write.py
async_batcher/ml/keras/: model.py
async_batcher/ml/sklearn/: model.py
async_batcher/scylladb/: update.py
async_batcher/sqlalchemy/: write.py
docker-compose/: dynamodb.yml  postgres.yml  scylladb.yml
examples/: diabetes_tf_model.h5  train.py
examples/dynamodb/: README.md  main.py
examples/fastapi/: README.md  main.py  optimized_predict_load_test.py  predict_load_test.py
examples/keras/: README.md  main.py
examples/keras_with_grpc/: README.md  client.py  predictor_pb2.py  predictor_pb2.pyi  predictor_pb2_grpc.py  requirements.txt  run_codegen.py  server.py
examples/keras_with_grpc/protos/: predictor.proto
tests/: conftest.py  test_batcher.py
tests/aws/dynamodb/: conftest.py  test_get.py
tests/integration/aws/: conftest.py  test_dynamodb.py
tests/integration/scylladb/: conftest.py  test_scylladb.py
tests/integration/sqlalchemy/: conftest.py  test_sqlalchemy.py
tests/sqlalchemy/: conftest.py  test_sqlalchemy.py
